--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          <br>Sono sempre alla ricerca di nuove opportunità, quindi sto migliorando le mie capacità su tutta la linea per contribuire a migliorare la vita delle persone.
        </h3>
        <nav class="hello-world__links">
-         <a href="about.html #contact" class="hello-world__links__write">Scrivimi</a>
+         <a href="about.html#contact" class="hello-world__links__write">Contattami</a>
        </nav>
       </div>
     </div>
