--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        <h3 class="large2">
          Sono un lavoratore digitale alla ricerca di un ambiente stimolante e collaborativo.
          <br> Ho più di 5 anni di esperienza in architettura, restauro, rilievo, nella realizzazione di grafiche, disegno digitale e modellazione 3D.
-         <br> Uso un sacco di software, così tanti che non riesco più a ternere il conto.
+         <br> Uso così tanti software da non riuscire più a ternere il conto.
        </h3>
        <div class="portfolio__links">
          <a href="materials/pdf/CV-Book_MS_2020-1.pdf" target="_blank" class="portfolio__links__projects">Scarica il mio Book</a>
